--- a/lib/css/respansive.css
+++ b/lib/css/respansive.css
@@ -1,15 +1,12 @@
 :root {
+  @media (min-width: 1370px) {
+    #pic-par {
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+    }
+  }
+
   @media (max-width: 1370px) {
-    #header-01,
-    #header-02 {
-      width: auto;
-      height: 10vh;
-    }
-    .header-r-l {
-      width: 8em;
-      height: 100%;
-      line-height: 90px;
-    }
     #paragraph {
       display: flex;
       flex-direction: column;
@@ -22,57 +19,89 @@
       height: 100%;
     }
     .slider {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      margin-top: 50px;
-      margin-bottom: 100px;
+      width: 88px;
+      overflow-x: hidden;
+    }
+    #pic-par {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  @media (max-width: 1100px) {
+    #pic-par {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media (max-width: 1370px) and (min-width: 900px) {
+    .slider {
+      width: 86vw;
+      overflow-x: hidden;
+      margin-bottom: 30px;
+      margin-top: 30px;
     }
     .slides img {
       width: 100% !important;
     }
-    #title-div p{
-      height: 500px;
+    #title-div p {
       overflow: auto;
     }
-    #output{
-      font-size: 14px;
+  }
+  @media (max-width: 900px) and (min-width: 820px) {
+    .slider {
+      width: 86vw;
+      overflow-x: hidden;
+      margin-bottom: 30px;
+      margin-top: 30px;
     }
-    .button-option{
-      font-size: 12px;
-      margin: 5px 50px;
+    .slides {
+      width: 100%;
     }
   }
-  @media (max-width: 890px){
-    .button-option{
-      margin: 5px 30px;
+  @media (max-width: 800px) {
+    #pic-par {
+      grid-template-columns: repeat(1, 1fr);
     }
   }
-  @media (max-width: 620px){
-    #output{
-      font-size: 12px;
+  @media (max-width: 820px) and (min-width: 700px) {
+    .slider {
+      width: 84vw;
+      overflow-x: hidden;
+      margin-bottom: 30px;
+      margin-top: 30px;
     }
-    .button-option{
-      margin: 5px 20px;
-    }
-  }
-  @media (max-width: 520px){
-    .button-option{
-      margin: 5px 3px;
+    .slides {
+      width: 100%;
     }
   }
-  @media (max-width: 450px) {
+  @media (max-width: 700px) and (min-width: 500px) {
+    .slider {
+      width: 79vw;
+      overflow-x: hidden;
+      margin-bottom: 30px;
+      margin-top: 30px;
+    }
+    .slides {
+      width: 100%;
+    }
+  }
+  @media (max-width: 500px) and (min-width: 300px) {
+    .slider {
+      width: 70vw;
+      overflow-x: hidden;
+      margin-bottom: 30px;
+      margin-top: 30px;
+    }
+    .slides {
+      width: 100%;
+    }
     #header-01,
     #header-02 {
       display: flex;
       justify-content: center;
       width: auto;
-      height: 10vh;
     }
     .header-r-l {
       width: 8em;
       height: 100%;
-      line-height: 90px;
     }
     #brand-div {
       margin-right: 2em;
@@ -80,16 +109,11 @@
     #menu-div ul {
       width: 13em;
     }
-    #title-div span{
+    #title-div span {
       width: 300px !important;
     }
-    #title-div p{
+    #title-div p {
       width: 60% !important;
-      height: 500px;
-      
-    }
-    #output{
-      overflow: auto;
     }
   }
 }
