--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -65,6 +65,7 @@ body {
   display: inline-block;
   width: 100px;
   height: 100%;
+  padding-left: 20px;
   padding-top: 20px;
   text-align: center;
 }
@@ -143,7 +144,7 @@ body {
   direction: rtl;
 }
 #paragraph {
-  margin: 20px 30px;
+  margin: 20px 50px;
   display: block;
   width: 30vw;
   text-align: justify;
